# DeusRidet

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: copilot-instructions.md
.github/instructions/: benchmarks.instructions.md  cpp.instructions.md  cuda.instructions.md  docs.instructions.md  philosophy.instructions.md  webui.instructions.md  workflow.instructions.md
.github/prompts/: add-cuda-kernel.prompt.md  devlog-entry.prompt.md  module-facade.prompt.md  refactor-split-file.prompt.md  verify-change.prompt.md
archive/speaker_stream_experiment/: speaker_stream.cpp
configs/: auditus.conf  machina.conf  persona.conf
docs/: ACKNOWLEDGMENTS.md
docs/en/: DEVLOG.md  PLAN_AUDIO_ENHANCEMENT.md  README.md  TESTS_TOOLS_BOUNDARY.md
docs/en/architecture/: 00-overview.md  01-conscientia.md  02-memoria.md  03-cogitatio.md  04-vigilia.md  05-sensus.md  06-vox.md  07-persona.md  08-instrumenta.md  09-tempus.md  10-nexus.md  11-machina.md
docs/en/archive/: PLAN_AUDIO_ENHANCEMENT.md
docs/en/devlog/: 2025-07-02.md  2025-07-26.md  2025-11-20.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-15.md  (+15 more)
docs/la/: README.md
docs/zh/: DEVLOG.md  PLAN_AUDIO_ENHANCEMENT.md  README.md  TESTS_TOOLS_BOUNDARY.md
runs/online_step4b_600s/: matched.jsonl  speaker_events.jsonl  summary.json
runs/online_step4c_v4_600s/: matched.jsonl  speaker_events.jsonl  summary.json
src/: commands.cpp  commands.h  main.cpp
src/actus/: README.la  actus.cpp  actus.h  awaken.cpp  awaken_consciousness.cpp  awaken_consciousness.h  awaken_hello.cpp  awaken_hello.h  awaken_router.cpp  awaken_router.h  awaken_router_consciousness.cpp  cmd_bench_gptq.cpp  cmd_bench_gptq_v2.cpp  cmd_bench_prefill.cpp  cmd_load_model.cpp  cmd_load_weights.cpp  cmd_profile_forward.cpp  cmd_profile_prefill.cpp  cmd_test_forward.cpp  cmd_test_gptq.cpp  cmd_test_sample.cpp  cmd_test_tokenizer.cpp  cmd_test_wavlm_cnn.cpp  cmd_test_weights.cpp  cmd_test_ws.cpp  cmd_test_ws_hello.cpp  cmd_test_ws_hello.h  cmd_test_ws_router.cpp  cmd_test_ws_router.h  load_model.cpp  load_weights.cpp
src/communis/: README.la  config.cpp  config.h  json_util.h  log.h  ring_buffer.h  tegra.cpp  tegra.h  tempus.h  timeline_logger.cpp  timeline_logger.h  trt_engine.cpp  trt_engine.h
src/conscientia/: README.la  attention_modulator.cpp  attention_modulator.h  conscientia_facade.cpp  conscientia_facade.h  frame.h  scheduler.cpp  scheduler.h  stream.cpp  stream.h  stream_loop.cpp
src/machina/: README.la  allocator.cpp  allocator.h  convert.cu  convert.h  forward.cu  forward.h  forward_bench.cu  forward_decode_main.cu  forward_kernels.cuh  forward_prefill.cu  forward_profile.cu  fp16_gemm.cu  fp16_gemm.h  gptq.cu  gptq.h  gptq_gemm.cu  gptq_gemm.h  gptq_gemm_v2.cu  gptq_gemm_v2.h  gptq_gemm_v2_bench.cu  gptq_gemv.cu  gptq_int8_wmma.cu  gptq_internal.cuh  gptq_wmma_bk128.cu  gptq_wmma_v1.cu  gptq_wmma_ws.cu  layer.cu  layer.h  layer_attention.cu  layer_int8.cu  layer_int8_dual.cu  marlin.cu  marlin.h  marlin_kernel.cuh  marlin_repack.cu  model.cpp  model.h  model_runtime.cpp  model_weights_loader.cpp  (+8 more)
src/memoria/: README.la  block_pool.cpp  block_pool.h  cache_kernels.cu  cache_kernels.h  cache_manager.cpp  cache_manager.h  importance_scorer.cu  importance_scorer.h  kv_swapper.cpp  kv_swapper.h
src/nexus/: README.la  ws_server.cpp  ws_server.h  ws_server_http.cpp
src/orator/: README.la  onnx_speaker_encoder.cpp  onnx_speaker_encoder.h  speaker_change_detector.cu  speaker_change_detector.h  speaker_db.cpp  speaker_db.h  speaker_encoder.cu  speaker_encoder.h  speaker_vector_store.cu  speaker_vector_store.h  speaker_vector_store_api.cu  speaker_vector_store_io.cu  spectral_cluster.cpp  spectral_cluster.h  spectral_cluster_affinity.cpp  spectral_cluster_embed.cpp  spectral_cluster_postprocess.cpp  spectral_cluster_stages.cpp  spectral_cluster_stages.h  wavlm_ecapa_ecapa.cu  wavlm_ecapa_encoder.cu  wavlm_ecapa_encoder.h  wavlm_ecapa_extract.cu  wavlm_ecapa_kernels.cuh  wavlm_ecapa_transformer.cu
tests/: asrTest2Final.txt  asrTest2OverlapTimeline.txt  test10_od07_mapped.txt  test11_od085_mapped.txt  test9_s3_mapped.txt  test_frcrn_gpu.cpp  test_fsmn_vad.cpp  test_mossformer2.cpp  test_output_ex4.txt  test_output_sticky1.txt  test_output_timeline_w.txt  test_output_topk1.txt  test_output_weighted1.txt  test_output_win3s.txt  test_output_win3s_t55.txt  test_overlap_separator.cpp  test_overlap_spkid.cpp  test_pyannote_seg3.cpp  test_silero_vad.cpp
tests/cuda/: test_ldsm_trans.cu
tests/fixtures/: cam_ablation_fine.csv  cam_ablation_v1.csv  short_seg_aggregation.csv  test_ground_truth.json  test_ground_truth_v1.jsonl  test_ground_truth_v1_fsmn.jsonl  test_ground_truth_v1_fsmn_t0.6.jsonl  test_ground_truth_v1_fsmn_t0.7.jsonl  test_ground_truth_v1_fsmn_t0.8.jsonl  upper_layer_ablation.csv  wl_cam_ablation_fsmn.csv  wl_cam_ablation_v1.csv
tests/integration/: test_forward.cpp  test_gptq.cpp  test_sample.cpp  test_tokenizer.cpp  test_wavlm_cnn.cpp  test_weights.cpp
tools/: analyze_asr_merge_review.py  analyze_separatio_identity_failures.py  auditus_canary_regression.py  auditus_runtime_shadow_batch.py  auditus_separatio_asr.cpp  auditus_separatio_examen.cpp  auditus_separatio_fusion_selector.py  auditus_separatio_identity_monitor.py  auditus_separatio_monitor.py  auditus_separatio_spkid.cpp  auditus_separatio_sweep.py  auditus_upstream_audio_probe.py  bench_gptq.cpp  bench_gptq_v2.cpp  bench_mossformer2.cpp  bench_prefill.cpp  cam_ablation.py  cam_diagnose.py  cam_extract_embeddings.cpp  capture_auditus_run.py  compare_asr.py  dev_main_helper.h  eval_overlap_timeline.py  eval_speaker_accuracy.py  eval_speaker_attribution.sh  export_asr_shadow_subspans.py  export_frcrn_onnx.py  export_frcrn_safetensors.py  export_homogeneity_clips.py  export_mossformer2_onnx.py  export_pyannote_onnx.py  frcrn_enhance_audio.py  fsmn_vad_segments.cpp  make_judge_doc.py  map_log_to_mapped.py  online_hybrid_ceiling.py  online_replay_score.py  parse_ground_truth.py  probe_bw.cu  probe_gemm.cu  (+23 more)
(+128 files in other folders)
